Tue Sep  3 22:10:49 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (install): Fixed typo: ($PROG) -> $(PROG)

Thu Aug 29 16:08:10 1996  Jeff Bigler  <jcb@mit.edu>

	* Makefile.in (install): added man pages for kadmin and
	kadmin.local

Fri Aug 23 14:16:18 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in: Use shared libaries if present.

Fri Aug 23 14:47:55 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c: add newlines to "invalid date spec" msg

	* getdate.y: add "never" as a valid date specification

Wed Aug 21 14:10:36 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c: memset policy structures before passing them to
 	kadm5_*_policy functions, so stack garbage >=2^32 doesn't end up
 	in a long field and confuse xdr

Mon Aug 19 12:11:27 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c: prints absolute 0 dates as "[never]", print mod date
 	and by on one line, fix coredump on getprinc -terse

	* Makefile.in: add target for datetest

	* getdate.y: accept dates after 1999

Fri Aug 16 13:46:31 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c: update addprinc and modprinc usage

Thu Aug 15 20:56:13 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in: remove check for -ldbm and -lndbm (old old
		garbage).

Mon Aug 12 20:20:11 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kadmin.1: Remove rename_principal. Add -maxrenewlife.

	* kadmin.c (kadmin_getprinc): Display the maximum renewable life
			field. 
		(kadmin_parse_princ_args): Add -maxrenwlife as a settable
			field. 

Mon Aug 12 11:47:31 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin_ct.ct: fix typo in add_principal

Sun Aug 11 16:29:27 1996  Barry Jaspan  <bjaspan@mit.edu>

	* keytab.c: reset static global "quiet" each time; don't print
 	whoami on normal status messages

Tue Aug  6 15:18:49 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin_ct.ct: get_{principals,policies} -> list_*; remove
 	rename_principal

	* kadmin.c: remove unsupported -salt option from ank usage
