@@ -1,3 +1,10 @@
+Thu Sep  5 20:15:12 1996  Ezra Peisach  (epeisach@mit.edu)
+ 
+  	* getdate.y: Declare a private copy of struct timeb (no-one uses
+		the extra return structure in our tree). This works around
+		a bug with Sun's cc cimpiler, and pragma incompatibility
+		in its header files.
+
 Tue Sep  3 22:10:49 1996  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* Makefile.in (install): Fixed typo: ($PROG) -> $(PROG)
